--- a/_data/share.yml
+++ b/_data/share.yml
@@ -28,11 +28,11 @@ platforms:
     icon: "fa-brands fa-mastodon"
     # See: https://github.com/justinribeiro/share-to-mastodon#properties
     instances:
-      - label: mastodon.social
+      - label: hachyderm.io
         link: "https://hachyderm.io/"
-  #     - label: mastodon.online
-  #       link: "https://mastodon.online/"
-  #     - label: fosstodon.org
-  #       link: "https://fosstodon.org/"
-  #     - label: photog.social
-  #       link: "https://photog.social/"
+      - label: mastodon.online
+        link: "https://mastodon.online/"
+      - label: fosstodon.org
+        link: "https://fosstodon.org/"
+      - label: photog.social
+        link: "https://photog.social/"
