--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@
 # Import the theme
 remote-theme: cotes2020/jekyll-theme-chirpy
 
+plugins: [jekyll-paginate]
+
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
