--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 # The Site Configuration
 
+
+
+plugins: [jekyll-paginate, jekyll-remote-theme]
+
 # Import the theme
 remote-theme: cotes2020/jekyll-theme-chirpy
-
-plugins: [jekyll-paginate]
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
